--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 
                 </div>
                 <div class="col-md-12" v-if="visao=='tabela'">
-
+                    Busca: <input type="text" class="form-control" v-model="busca">
                     <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th>Nome</th>
                                 <th v-for="(coluna,indice) in ordem.colunas">
-                                   <a href="#" @click.prevent="ordem.orientacao[indice] = ordem.orientacao[indice]=='desc'?'asc':'desc'"> 
+                                   <a href="#" @click.prevent="ordenar(indice)"> 
                                        {{coluna | ucwords}}
                                     </a>
                                 </th>
@@ -90,7 +90,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="time in timesOrdenados">
+                            <tr v-for="time in timesFiltrados">
                                 <td><img :src="time.escudo" :alt="time.nome" class="escudo">{{time.nome | ucwords}}</td>
                                 <td>{{time.pontos}}</td>
                                 <td>{{time.gm}}</td>
@@ -186,6 +186,7 @@
                 el: '#app',
                 data: {
                     gols: 3,
+                    busca: '',
                     ordem:{
                         colunas:['pontos','gm','gs','saldo'],
                         orientacao:['desc','desc','asc','desc']
@@ -225,9 +226,15 @@
                     visao: 'tabela',
                 },
                 computed:{
-                    timesOrdenados(){
+                    timesFiltrados(){
                         console.log('ordem',this.ordem);
-                        return  _.orderBy(this.times,this.ordem.colunas,this.ordem.orientacao);
+                        var times =  _.orderBy(this.times,this.ordem.colunas,this.ordem.orientacao);
+                        var self = this;
+
+                        return _.filter(times, function(time){
+                            var busca = self.busca.toLowerCase();
+                            return time.nome.toLowerCase().indexOf(busca) >= 0;
+                        });
 
                     } ,
                     timesLibertadores(){
@@ -253,7 +260,7 @@
 
                         this.novoJogo.fora.time = this.times[indiceFora];
                         this.novoJogo.fora.gols = 0;
-                        console.log(this.novoJogo);
+                        //console.log(this.novoJogo);
                         this.visao = 'placar';
                     },
                     fimJogo() {
@@ -264,6 +271,10 @@
                         timeCasa.fimJogo(timeAdversario, golsMarcados, golsSofridos);
                         this.visao = 'tabela';
 
+                    },
+                    ordenar(indice){
+                        //this.ordem.orientacao[indice] = this.ordem.orientacao[indice]=='desc'?'asc':'desc' ;
+                        this.$set(this.ordem.orientacao, indice, this.ordem.orientacao[indice]=='desc'?'asc':'desc')
                     }
                 },
                 filters: {
