--- a/instancia-vue.html
+++ b/instancia-vue.html
@@ -7,6 +7,8 @@
     <title>School of net - Vue.Js</title>
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
+    
 </head>
 <body>
 
